Project image screenshot

--- a/index.html
+++ b/index.html
@@ -180,13 +180,13 @@
                             <div class="content">
 
                                 <div class="item featured text-center">
-                                    <h3 class="title"><a href="https://justcut.today" target="_blank" title="Justcut Today">Babies MOments</a></h3>
+                                    <h3 class="title"><a href="https://justcut.today" target="_blank" title="Justcut Today">Babies Moments</a></h3>
                                     <p class="summary">Order Babies Products Online</p>
                                     <div class="featured-image">
-                                        <a href="https://justcut.today" target="_blank" title="Justcut Today">
+                                        <a href="https://awadalmurtajijointkw.com/Babiesmoments/" target="_blank" title="Babiesmoments">
                                             <img class="img-responsive project-image" src="assets/images/projects/project-featured.png" alt="Knowledge Tribe" title="Justcut Today"/>
                                         </a>
-                                        <div class="ribbon">
+                                        <div class="ribbon" style="background-color:red;">
                                             <div class="text">New</div>
                                         </div>
                                     </div>
