--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <meta property="og:url" content="https://rahulg9544.github.io/portfolio/" />
         <meta property="og:site_name" content="Portfolio | Rahul G - Back-end Developer" />
         <meta property="og:type" content="website" />
-        <meta property="og:image" content="https://rahulg9544.github.io/portfolio" />
+        <meta property="og:image" content="https://rahulg9544.github.io/portfolio/launch.jpg" />
 
         <link rel="shortcut icon" href="favicon.ico">
         <!-- small devices icons -->
@@ -104,7 +104,7 @@
                 <!--//profile-->
                 <div class="pull-right">
                     <!-- <a class="btn btn-cta-primary" href="mailto:&#114;&#111;&#104;&#097;&#110;&#114;&#107;&#104;&#117;&#100;&#101;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;" target="_blank" title="Mail to &#114;&#111;&#104;&#097;&#110;&#114;&#107;&#104;&#117;&#100;&#101;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;"><i class="fa fa-paper-plane"></i> Mail</a>&nbsp; -->
-                    <a class="btn btn-info" href="skype:rohan_khude_r?chat" title="Contact Rahul G using Skype"><i class="fa fa-skype"></i> CHAT</a>
+                    <a class="btn btn-info" href="skype:Rahul G?chat" title="Contact Rahul G using Skype"><i class="fa fa-skype"></i> CHAT</a>
                 </div>
             </div>
             <!--//container-->
