--- a/index.html
+++ b/index.html
@@ -198,23 +198,28 @@
                                 <!--//item-->
                                 <div class="item">
                                     <h3 class="title"><a href="https://www.bombaygoldanddiamonds.com/" target="_blank" >Bombay Gold and Diamonds</a> </h3>
-                                    <p class="summary">A jewellery ecommerce application<b> <br>Technology Stack -</b> PHP, MySQL, HTML, CSS, Javascript</p>
+                                    <p class="summary">A jewellery ecommerce application<b> <br>Technology Stack -</b> PHP, MySQL, HTML, Codeigniter, CSS, Javascript</p>
                                 </div>
                                 <!--//item-->
 
                                 <div class="item">
                                     <h3 class="title"><a href="https://www.adayalam.co.in/" target="_blank" >Adayalam Publications</a> </h3>
-                                    <p class="summary">A jewellery ecommerce application<b> <br>Technology Stack -</b> PHP, MySQL, HTML, CSS, Javascript</p>
+                                    <p class="summary">A Book ecommerce application<b> <br>Technology Stack -</b> PHP, MySQL, HTML, Codeigniter, CSS, Javascript</p>
                                 </div>
 
                                 <div class="item">
                                     <h3 class="title"><a href="https://souktrip.com/" target="_blank">Souktrip</a> </h3>
-                                    <p class="summary">Travel and Tourism Management Project<b> <br>Technology Stack -</b> PHP, MySQL, HTML, CSS, Javascript</p>
+                                    <p class="summary">Travel and Tourism Management Project<b> <br>Technology Stack -</b> PHP, Codeigniter, MySQL, HTML, CSS, Javascript</p>
                                 </div>
 
                                 <div class="item">
                                     <h3 class="title"><a href="http://nortape.eu/" target="_blank">Nortape</a> </h3>
-                                    <p class="summary">A product enquiry dynamic website<b> <br>Technology Stack -</b> PHP, MySQL, HTML, CSS, Javascript</p>
+                                    <p class="summary">A product enquiry dynamic website<b> <br>Technology Stack -</b> PHP, MySQL, Codeigniter, HTML, CSS, Javascript</p>
+                                </div>
+
+                                <div class="item">
+                                    <h3 class="title"><a href="" target="_blank">Brainbiotic Restapis</a> </h3>
+                                    <p class="summary">Ecommerce Rest api development<b> <br>Technology Stack -</b> PHP, MySQL, Codeigniter, HTML, CSS, Javascript</p>
                                 </div>
                                 
                             </div>
